--- a/MNIST_mislabeled.ipynb
+++ b/MNIST_mislabeled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -65,98 +65,70 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_17 (Conv2D)           (None, 26, 26, 32)        320       \n",
+      "conv2d_30 (Conv2D)           (None, 26, 26, 32)        320       \n",
       "_________________________________________________________________\n",
-      "conv2d_18 (Conv2D)           (None, 24, 24, 32)        9248      \n",
+      "max_pooling2d_16 (MaxPooling (None, 13, 13, 32)        0         \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_9 (MaxPooling2 (None, 12, 12, 32)        0         \n",
+      "dropout_25 (Dropout)         (None, 13, 13, 32)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_13 (Dropout)         (None, 12, 12, 32)        0         \n",
+      "flatten_10 (Flatten)         (None, 5408)              0         \n",
       "_________________________________________________________________\n",
-      "conv2d_19 (Conv2D)           (None, 10, 10, 64)        18496     \n",
+      "dense_49 (Dense)             (None, 10)                54090     \n",
       "_________________________________________________________________\n",
-      "conv2d_20 (Conv2D)           (None, 8, 8, 64)          36928     \n",
+      "dropout_26 (Dropout)         (None, 10)                0         \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_10 (MaxPooling (None, 4, 4, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "dropout_14 (Dropout)         (None, 4, 4, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "flatten_5 (Flatten)          (None, 1024)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_39 (Dense)             (None, 256)               262400    \n",
-      "_________________________________________________________________\n",
-      "dropout_15 (Dropout)         (None, 256)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_40 (Dense)             (None, 10)                2570      \n",
+      "dense_50 (Dense)             (None, 10)                110       \n",
       "=================================================================\n",
-      "Total params: 329,962\n",
-      "Trainable params: 329,962\n",
+      "Total params: 54,520\n",
+      "Trainable params: 54,520\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
+      "Train on 54000 samples, validate on 6000 samples\n",
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 231s 4ms/step - loss: 2.3035 - acc: 0.1003\n",
+      "54000/54000 [==============================] - 44s 820us/step - loss: 2.3028 - acc: 0.0994 - val_loss: 2.3029 - val_acc: 0.0928\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 244s 4ms/step - loss: 2.3028 - acc: 0.1000\n",
+      "54000/54000 [==============================] - 35s 657us/step - loss: 2.3026 - acc: 0.1012 - val_loss: 2.3029 - val_acc: 0.0927\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 201s 3ms/step - loss: 2.3027 - acc: 0.1002\n",
+      "54000/54000 [==============================] - 35s 649us/step - loss: 2.3026 - acc: 0.1004 - val_loss: 2.3029 - val_acc: 0.0927\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 199s 3ms/step - loss: 2.3027 - acc: 0.1007\n",
+      "54000/54000 [==============================] - 32s 596us/step - loss: 2.3026 - acc: 0.1009 - val_loss: 2.3029 - val_acc: 0.0927\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 224s 4ms/step - loss: 2.3027 - acc: 0.0996\n",
+      "54000/54000 [==============================] - 37s 689us/step - loss: 2.3026 - acc: 0.1012 - val_loss: 2.3029 - val_acc: 0.0930\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 224s 4ms/step - loss: 2.3027 - acc: 0.0997\n",
+      "54000/54000 [==============================] - 40s 741us/step - loss: 2.3026 - acc: 0.1009 - val_loss: 2.3029 - val_acc: 0.0927\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 200s 3ms/step - loss: 2.3027 - acc: 0.1005\n",
+      "54000/54000 [==============================] - 33s 610us/step - loss: 2.3025 - acc: 0.1017 - val_loss: 2.3029 - val_acc: 0.0933\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 223s 4ms/step - loss: 2.3027 - acc: 0.0998\n",
+      "54000/54000 [==============================] - 38s 700us/step - loss: 2.3025 - acc: 0.1014 - val_loss: 2.3029 - val_acc: 0.0942\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 204s 3ms/step - loss: 2.3027 - acc: 0.1017\n",
-      "Epoch 10/10\n",
-      "60000/60000 [==============================] - 193s 3ms/step - loss: 2.3027 - acc: 0.1002\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-15203f6176b5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0mhistory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_split\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0mhistorys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhistorys\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'acc'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m         \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhistorys\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'val_acc'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"--\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'train100%'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'test100%'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'train50%'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'test50%'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'train0%'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'test0%'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'upper left'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "39744/54000 [=====================>........] - ETA: 7s - loss: 2.3027 - acc: 0.1001"
      ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "\tx_train, y_train, x_test, y_test = load_data()\n",
-    "\tfor i in range(len(y_train)):\n",
-    "\t\ty_train[i] = np.eye(10)[np.random.choice(10,1)][0]\n",
-    "\t# for i in range(len(y_test)):\n",
-    "\t# \ty_test[i] = np.eye(10)[np.random.choice(10,1)][0]\n",
+    "    for j in range(3):\n",
+    "        x_train, y_train, x_test, y_test = load_data()\n",
+    "        for i in range(len(y_train)-30000*j):\n",
+    "            y_train[i] = np.eye(10)[np.random.choice(10,1)][0]\n",
+    "        # for i in range(len(y_test)):\n",
+    "        # \ty_test[i] = np.eye(10)[np.random.choice(10,1)][0]\n",
     "\n",
-    "\tmodel = Sequential()\n",
-    "\tmodel.add(Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)))\n",
-    "\tmodel.add(Conv2D(32, (3, 3), activation='relu'))\n",
-    "\tmodel.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\tmodel.add(Dropout(0.25))\n",
-    "\n",
-    "\tmodel.add(Conv2D(64, (3, 3), activation='relu'))\n",
-    "\tmodel.add(Conv2D(64, (3, 3), activation='relu'))\n",
-    "\tmodel.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\tmodel.add(Dropout(0.25))\n",
-    "\n",
-    "\tmodel.add(Flatten())\n",
-    "\tmodel.add(Dense(256, activation='relu'))\n",
-    "\tmodel.add(Dropout(0.5))\n",
-    "\tmodel.add(Dense(10, activation='softmax'))\n",
-    "\tmodel.compile(loss = 'categorical_crossentropy', optimizer = 'sgd', metrics = ['accuracy'])\n",
-    "\tmodel.summary()\n",
-    "\thistory = model.fit(x_train, y_train, epochs = 10, validation_split = 0, shuffle = False)\n",
-    "\thistorys.append(history)\n",
-    "\tplt.plot(historys[i].history['acc'])\n",
-    "\tplt.plot(historys[i].history['val_acc'],\"--\")\n",
-    "\tplt.legend(['train100%', 'test100%','train50%','test50%','train0%','test0%'], loc='upper left')"
+    "        model = Sequential()\n",
+    "        model.add(Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)))\n",
+    "        model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "        model.add(Dropout(0.25))\n",
+    "        model.add(Flatten())\n",
+    "        model.add(Dense(10, activation='relu'))\n",
+    "        model.add(Dropout(0.5))\n",
+    "        model.add(Dense(10, activation='softmax'))\n",
+    "        model.compile(loss = 'categorical_crossentropy', optimizer = 'sgd', metrics = ['accuracy'])\n",
+    "        model.summary()\n",
+    "        history = model.fit(x_train, y_train, epochs = 10, validation_split = 0.1, shuffle = False)\n",
+    "        historys.append(history)\n",
+    "        plt.plot(historys[j].history['acc'])\n",
+    "        plt.plot(historys[j].history['val_acc'],\"--\")\n",
+    "        plt.legend(['train100%', 'test100%','train50%','test50%','train0%','test0%'], loc='upper left')"
    ]
   },
   {
