--- a/mnist_random1.ipynb
+++ b/mnist_random1.ipynb
@@ -16,9 +16,19 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
+    "from keras.datasets import mnist\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers.core import Dense, Dropout, Activation,Flatten\n",
+    "from keras.optimizers import SGD, Adam\n",
+    "from keras.utils import np_utils\n",
+    "from keras.callbacks import EarlyStopping\n",
+    "import matplotlib.pyplot as plt\n",
+    "from keras.layers import Conv2D, MaxPooling2D\n",
     "import numpy as np\n",
-    "from keras.datasets import mnist"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -27,14 +37,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_size = 28\n",
+    "num_classes = 10\n",
+    "img_size = 28 # mnist size = 28*28\n",
     "crop_size = 2\n",
     "image_channel = 1\n",
     "learning_rate = 0.1\n",
     "batch_size = 2000\n",
-    "epochs = 10\n",
-    "class_num = 10\n",
-    "# data_augmentation = False"
+    "epochs = 10"
    ]
   },
   {
@@ -43,55 +52,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def load_data():\n",
+    "\t# load mnist data\n",
+    "\t(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
     "\n",
-    "def crop_image(images, c):\n",
-    "    images = images[:, c:image_size-c, c:image_size-c]\n",
-    "    return images\n",
+    "\t# preprocess data, let pixel between 0~1\n",
+    "\tx_train = x_train.reshape((x_train.shape[0], img_size * img_size))\n",
+    "\tx_train = x_train.astype('float32') / 255.\n",
     "\n",
-    "def scale_pixel_value(images):\n",
-    "    return images/255.\n",
+    "\tx_test = x_test.reshape((x_test.shape[0], img_size * img_size))\n",
+    "\tx_test = x_test.astype('float32') / 255.\n",
     "\n",
-    "def onehot(label):\n",
-    "    onehot_label = []\n",
-    "    for l in label:\n",
-    "        lt = [0]*class_num\n",
-    "        lt[l[0]-1] = 1\n",
-    "        onehot_label.append(lt)\n",
-    "    return np.array(onehot_label)\n",
+    "\ty_train = np_utils.to_categorical(y_train, num_classes)\n",
+    "\ty_test = np_utils.to_categorical(y_test, num_classes)\n",
     "\n",
-    "def partially_corrupted_label(label, probability):\n",
-    "    pcl = []\n",
-    "    for l in label:\n",
-    "        if np.random.random_sample() < probability:\n",
-    "            pcl.append([np.random.randint(class_num)])\n",
-    "        else:\n",
-    "            pcl.append([l[0]])\n",
-    "    return pcl\n",
-    "\n",
-    "def random_label(label):\n",
-    "    return np.reshape(np.random.randint(class_num, size=len(label)), [-1, 1])"
+    "\treturn x_train, y_train, x_test, y_test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(60000, 576) (60000,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-    "x_train = scale_pixel_value(np.reshape(crop_image(x_train, crop_size), \n",
-    "                                       [-1, (image_size - crop_size**2)**2 * image_channel]))\n",
-    "num_train = x_train.shape[0]\n",
-    "image_size = image_size - crop_size**2\n",
-    "print (x_train.shape, y_train.shape)"
+    "def random_label(label):\n",
+    "    return np.reshape(np.random.randint(num_classes, size=len(label)), [-1,])\n",
+    "def partially_corrupted_label(label, probability):\n",
+    "    pcl = []\n",
+    "    for l in label:\n",
+    "        if np.random.random_sample() <= probability:\n",
+    "            pcl.append(np.random.randint(0, num_classes))\n",
+    "        else:\n",
+    "            pcl.append(l)\n",
+    "    return np.array(pcl)"
    ]
   },
   {
@@ -100,11 +93,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_input_size = image_size**2 * image_channel\n",
+    "x_train, y_train, x_test, y_test = load_data()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scale_pixel_value(images):\n",
+    "    return images/255.\n",
+    "\n",
+    "def partially_corrupted_label(label, probability):\n",
+    "    pcl = []\n",
+    "    for l in label:\n",
+    "        if np.random.random_sample() < probability:\n",
+    "            pcl.append([np.random.randint(num_classes)])\n",
+    "        else:\n",
+    "            pcl.append([l[0]])\n",
+    "    return pcl\n",
+    "\n",
+    "def random_label(label):\n",
+    "    return np.reshape(np.random.randint(num_classes, size=len(label)), [-1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 784) (60000, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (x_train.shape, y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_input_size = img_size**2 * image_channel\n",
     "n_hidden_1 = 16\n",
     "n_hidden_2 = 16\n",
     "n_hidden_3 = 16\n",
-    "n_output_size = class_num\n",
+    "n_output_size = num_classes\n",
     "sigma = 0.01\n",
     "\n",
     "weights = {\n",
@@ -136,10 +177,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "num_train = x_train.shape[0]\n",
     "\n",
     "def train(X_train, Y_train, num_layer):\n",
     "    x = tf.placeholder(tf.float32, [None, n_input_size], name='input')\n",
@@ -156,7 +198,6 @@
     "    #optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(loss)\n",
     "    correct_prediction = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))    \n",
     "    accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
-    "    Y_train = onehot(Y_train)\n",
     "\n",
     "    with tf.Session() as sess:\n",
     "\n",
@@ -177,57 +218,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-6-3a63bd099dc0>:11: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "\n",
-      "Future major versions of TensorFlow will allow gradients to flow\n",
-      "into the labels input on backprop by default.\n",
-      "\n",
-      "See @{tf.nn.softmax_cross_entropy_with_logits_v2}.\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "invalid index to scalar variable.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-24a51c091ac7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Normal 1 layer mlp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-6-3a63bd099dc0>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(X_train, Y_train, num_layer)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mcorrect_prediction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mequal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduce_mean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorrect_prediction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"float\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mY_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0monehot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-6b025f3cafba>\u001b[0m in \u001b[0;36monehot\u001b[0;34m(label)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mlt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mclass_num\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mlt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[0monehot_label\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monehot_label\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: invalid index to scalar variable."
+      "(epoch 1)\n",
+      "[Loss / Tranining Accuracy] 2.2946 / 0.1743\n",
+      " \n"
      ]
     }
    ],
    "source": [
     "train(x_train, y_train, 1) #Normal 1 layer mlp\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train(x_train, partially_corrupted_label(y_train, 0.3), 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train(x_train, random_label(y_train),1)"
    ]
   },
   {
